--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,20 +5,20 @@
 @layer base {
   :root,
   html[data-theme="light"] {
-    --color-fill: 251, 254, 251;
+    --color-fill: 243, 243, 243;
     --color-text-base: 40, 39, 40;
-    --color-accent: 0, 108, 172;
+    --color-accent: 220, 181, 43;
     --color-card: 230, 230, 230;
     --color-card-muted: 205, 205, 205;
-    --color-border: 236, 233, 233;
+    --color-border: 220, 181, 43;
   }
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
+    --color-fill: 24, 24, 24;
     --color-text-base: 234, 237, 243;
-    --color-accent: 255, 107, 1;
+    --color-accent: 220, 181, 43;
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
-    --color-border: 171, 75, 8;
+    --color-border: 220, 181, 43;
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
@@ -33,7 +33,7 @@
   }
   section,
   footer {
-    @apply mx-auto max-w-3xl px-4;
+    @apply mx-auto max-w-4xl px-4;
   }
   a {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
@@ -85,13 +85,13 @@
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    @apply bg-skin-card;
+    @apply bg-skin-accent;
   }
 
-  /* Handle on hover */
+  /* Handle on hover
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-skin-card-muted;
-  }
+  } */
 
   /* ===== Code Blocks & Syntax Highlighting ===== */
   pre:has(code) {
@@ -124,4 +124,8 @@
   .focus-outline {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
+}
+
+#table-of-contents {
+  @apply w-fit rounded-md border-2 border-skin-accent pl-2;
 }
