new post added - How to Install Bun on Windows: Multiple Ways

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import { LOGO_IMAGE, SITE } from "@config";
-import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
@@ -148,7 +147,9 @@ const { activeNav } = Astro.props;
 			</nav>
 		</div>
 	</div>
-	<Hr />
+	<div class={`max-w-6xl mx-auto px-4`}>
+		<hr class="border-skin-line" />
+	</div>
 </header>
 
 <style>
@@ -156,7 +157,7 @@ const { activeNav } = Astro.props;
 		@apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
 	}
 	.nav-container {
-		@apply mx-auto flex max-w-4xl flex-col items-center justify-between sm:flex-row;
+		@apply mx-auto flex max-w-6xl flex-col items-center justify-between sm:flex-row;
 	}
 	.top-nav-wrap {
 		@apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
